{
    "name": "InputActions",
    "maps": [
        {
            "name": "GameCamera",
            "id": "01b6bbe5-7cd6-4322-8eac-076a37e96fd4",
            "actions": [
                {
                    "name": "CamMove",
                    "type": "Value",
                    "id": "c0771a4d-d6cd-480d-a906-4a73b564fa0f",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "75f14e20-57dd-4a80-8c7d-f06fcae148a2",
                    "path": "3DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b3e3dc10-b1cc-463b-804c-7783d2ea3723",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "My control scheme",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c3c8504d-29a8-477d-aef8-4c86595243a2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "My control scheme",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1b39e36c-c69c-41ba-a9f8-d4f1d9d1ff63",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "My control scheme",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d52f83a3-aad2-4e11-ba3b-04ab7664c1f9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "My control scheme",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "2e609b5c-63a6-43f8-a915-b04bf5b8306d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "My control scheme",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "b46e9663-940e-4b4f-ab6d-2b962dc689bd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "My control scheme",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "My control scheme",
            "bindingGroup": "My control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}